# pySMME

./: CMakeLists.txt  README.rst  readthedocs.yaml  setup.py
docs/: environment.yaml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pysmme.rst
pysmme/: tools.py  transforms.py
pysmme.egg-info/: PKG-INFO  SOURCES.txt
src/: auxfunc.h  smme.cpp  wave_filter.cpp
